Crash during rendering when using Cache BVH #38311

Closed
opened 2014-01-22 05:21:11 +01:00 by Matias S · 12 comments

System Information
Core i5 8GB ram
Windows 8.1 Pro 64bit

Core i3 8GB ram
Windows 7Pro 64bit

Blender Version
Broken: Build: 6cd132b (1/18/2014 and newer experimental builds for VS2013 x64)
Worked: 2.69 release

Short description of error
Program crash at BVH build stage when rendering fluids using Cycles. Crashes with build version listed above and newer using both custom and "factory" settings

Exact steps for others to reproduce the error
test.blend

Build simple fluid simulation using one domain and one fluid, bake simulation, select a non-starting frame, enable Cache BVH, render, crash.

**System Information** Core i5 8GB ram Windows 8.1 Pro 64bit Core i3 8GB ram Windows 7Pro 64bit **Blender Version** Broken: Build: 6cd132b (1/18/2014 and newer experimental builds for VS2013 x64) Worked: 2.69 release **Short description of error** Program crash at BVH build stage when rendering fluids using Cycles. Crashes with build version listed above and newer using both custom and "factory" settings **Exact steps for others to reproduce the error** [test.blend](https://archive.blender.org/developer/F71503/test.blend) Build simple fluid simulation using one domain and one fluid, bake simulation, select a non-starting frame, enable Cache BVH, render, crash.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @CodeMatias

Added subscriber: @CodeMatias
Author

Update: blender-2.69-fd0b104-win64 (Official Wed Jan 22 01:07:42 2014) build experiences the same hang. Disabling Cache BVH option allows correct rendering.

Update: blender-2.69-fd0b104-win64 (Official Wed Jan 22 01:07:42 2014) build experiences the same hang. Disabling Cache BVH option allows correct rendering.

Added subscriber: @Sergey

Added subscriber: @Sergey

Couldn't reproduce the crash on linux. Just one thing: VS2013 is still experimental, please try using official build from http://builder.blender.org/download/ (currently it's blender-2.69-fd0b104-win64.zip).

Couldn't reproduce the crash on linux. Just one thing: VS2013 is still experimental, please try using official build from http://builder.blender.org/download/ (currently it's blender-2.69-fd0b104-win64.zip).
Author

"please try using official build from http://builder.blender.org/download/ (currently it's blender-2.69-fd0b104-win64.zip)" Please see my followup comment, already tested and same issue present on two computers with different versions of Windows.

"please try using official build from http://builder.blender.org/download/ (currently it's blender-2.69-fd0b104-win64.zip)" Please see my followup comment, already tested and same issue present on two computers with different versions of Windows.
Brecht Van Lommel was assigned by Sergey Sharybin 2014-01-22 11:31:15 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

@CodeMatias, ah sorry missed that.

@brecht, maybe you'll find something :)

@CodeMatias, ah sorry missed that. @brecht, maybe you'll find something :)

This issue was referenced by blender/blender-addons-contrib@4b820fb673

This issue was referenced by blender/blender-addons-contrib@4b820fb673319989026433f284e11671885757c0

This issue was referenced by 4b820fb673

This issue was referenced by 4b820fb673319989026433f284e11671885757c0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4b820fb673.

Closed by commit 4b820fb673.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38311
No description provided.