Fix T38311: cycles BVH cache crash on Windows.